chore: change namespace name.

--- a/adapter/composer.json
+++ b/adapter/composer.json
@@ -1,7 +1,7 @@
 {
     "autoload": {
         "psr-4": {
-            "Thiago\\BehavioralPattern\\": "src"
+            "Thiago\\StructuralPattern\\": "src"
         }
     }
 }
